# gpu-cluster-forecaster

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  render.yaml
.github/workflows/: backend-ci.yml  frontend-ci.yml
backend/: Makefile  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: config.py  main.py
backend/app/api/: deps.py
backend/app/api/middleware/: __init__.py  cors.py  errors.py
backend/app/api/routes/: health.py  machines.py  models.py  predict.py
backend/app/api/schemas/: __init__.py  common.py  machines.py  models.py  predict.py
backend/app/data/: __init__.py  dataset.py  downloader.py  loader.py  preprocessor.py
backend/app/inference/: __init__.py  data_store.py  derive.py  model_registry.py  predictor.py  upload_service.py
backend/app/models/: __init__.py  base.py  baseline.py  lstm.py
backend/app/training/: __init__.py  callbacks.py  evaluator.py  trainer.py
backend/app/utils/: logger.py
backend/scripts/: download_data.py  train.py
backend/tests/: conftest.py
backend/tests/test_api/: conftest.py  test_health.py  test_machines.py  test_models.py  test_predict.py
backend/tests/test_data/: test_loader.py  test_preprocessor.py
backend/tests/test_models/: test_baseline.py  test_lstm.py
backend/tests/test_training/: test_trainer.py
frontend/: eslint.config.js  index.html  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/hooks/: useApi.js  useDashboardData.js
frontend/src/services/: api.js
weights/: lstm_1x32_best.pt  lstm_2x128_best.pt  lstm_2x128_metrics.json
(+22 files in other folders)
